fix(web): fix toolbar collapse on small width

--- a/actor-apps/app-web/src/styles/toolbar.scss
+++ b/actor-apps/app-web/src/styles/toolbar.scss
@@ -64,7 +64,7 @@
 
   &__controls {
     box-sizing: border-box;
-    width: $activity-width;
+    //width: $activity-width;
     margin-top: 14px;
     &__search {
       position: relative;
